# mee-pdn

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  clippy.toml  justfile  mee-pdn.code-workspace
.claude/commands/opsx/: apply.md  archive.md  explore.md  propose.md
.claude/skills/openspec-apply-change/: SKILL.md
.claude/skills/openspec-archive-change/: SKILL.md
.claude/skills/openspec-explore/: SKILL.md
.claude/skills/openspec-propose/: SKILL.md
.devcontainer/: Dockerfile.app  README.md  compose-all.yml  devcontainer.json
.devcontainer/sandcat/: compose-proxy.yml
.devcontainer/sandcat/scripts/: app-init.sh  app-user-init.sh
.github/workflows/: ci.yml  docker.yml
.sandcat/: settings.json
crates/data-layer/: Cargo.toml
crates/data-layer/src/: access.rs  connection_metadata.rs  connections.rs  gate.rs  grant.rs  layer.rs  lib.rs  linking.rs  node.rs  private_metadata.rs  registry.rs
crates/data-layer/tests/: connection_metadata.rs  connections_two_devices.rs  device_linking.rs  extra_protocols.rs  listing.rs  multi_identity.rs  read_restriction.rs  sync_two_devices.rs  sync_two_nodes.rs  three_devices.rs
crates/iroh-docs-experiment/: Cargo.toml
crates/iroh-docs-experiment/src/: lib.rs
crates/iroh-docs-experiment/tests/: sync_two_nodes.rs
crates/mee-demo/: Cargo.toml
crates/mee-demo/src/: main.rs
crates/mee-demo/tests/: containers.rs
crates/mee-demo/tests/common/: mod.rs
crates/mee-dev/: Cargo.toml
crates/mee-dev/src/: main.rs
crates/mee-did-api/: Cargo.toml
crates/mee-did-api/src/: error.rs  lib.rs
crates/mee-did-key/: Cargo.toml
crates/mee-did-key/src/: lib.rs
crates/mee-identity-api/: Cargo.toml
crates/mee-identity-api/src/: error.rs  lib.rs
crates/mee-identity-keri/: Cargo.toml
crates/mee-identity-keri/src/: lib.rs
crates/mee-local-store-api/: Cargo.toml
crates/mee-local-store-api/src/: lib.rs
crates/mee-local-store-mem/: Cargo.toml
crates/mee-local-store-mem/src/: lib.rs
crates/mee-node-api/: Cargo.toml
crates/mee-node-api/src/: data_service.rs  identity_service.rs  lib.rs  sync_service.rs  trust_service.rs
crates/mee-node-axum/: Cargo.toml
crates/mee-node-axum/src/: lib.rs  main.rs
crates/mee-node-demo-impl/: Cargo.toml
crates/mee-node-demo-impl/src/: lib.rs
crates/mee-node-demo-impl/tests/: p2p_demo.rs
crates/mee-pdn-layer/: Cargo.toml
crates/mee-pdn-layer/src/: lib.rs
crates/mee-sync-api/: Cargo.toml
crates/mee-sync-api/src/: error.rs  lib.rs
crates/mee-sync-api/src/managers/: data.rs  delegation.rs  engine.rs  mod.rs  namespace.rs  network.rs  session.rs
crates/mee-sync-iroh-docs/: Cargo.toml
crates/mee-sync-iroh-docs/src/: gate.rs  lib.rs  node.rs  registry.rs
crates/mee-sync-iroh-willow/: Cargo.toml
crates/mee-sync-iroh-willow/src/: lib.rs  test_helpers.rs
crates/mee-sync-iroh-willow/src/gossip/: advertisement.rs  config.rs  error.rs  event_loop.rs  matching.rs  mod.rs  peer_cache.rs
crates/mee-sync-iroh-willow/src/managers/: data.rs  delegation.rs  engine.rs  mod.rs  namespace.rs  network.rs  session.rs
crates/mee-sync-iroh-willow/tests/: gossip_discovery.rs
crates/mee-transport-api/: Cargo.toml
crates/mee-transport-api/src/: lib.rs
crates/mee-transport-http/: Cargo.toml
crates/mee-transport-http/src/: lib.rs
crates/mee-types/: Cargo.toml
crates/mee-types/src/: lib.rs  local_store.rs  non_empty.rs
crates/mee-wasm/: Cargo.toml
crates/mee-wasm/src/: lib.rs
crates/mee-willow-layer/: Cargo.toml
crates/mee-willow-layer/src/: lib.rs
crates/pdn-layer/: Cargo.toml
crates/pdn-layer/src/: lib.rs  uwill.rs
crates/pdn-node/: Cargo.toml
crates/pdn-node-http/: Cargo.toml
crates/pdn-node-http/src/: lib.rs  main.rs
crates/pdn-node-http/tests/: smoke.rs
crates/pdn-node/src/: connections.rs  data.rs  identity.rs  lib.rs  linking.rs  pairing.rs  runtime.rs  sync.rs
crates/pdn-node/tests/: connections.rs  data.rs  embedding.rs  establishment.rs  linking.rs  scoped_grants.rs  sibling_serving.rs
crates/pdn-node/tests/common/: mod.rs
crates/pdn-types/: Cargo.toml
crates/pdn-types/src/: data.rs  lib.rs  non_empty.rs
crates/test-utils/: Cargo.toml
crates/test-utils/src/: lib.rs
crates/uwill/: Cargo.toml
crates/uwill/src/: lib.rs
openspec/: config.yaml
ops/: Dockerfile
