[workspace]
members = [
  "crates/mee-identity-api", # KERI identity API & types
  "crates/mee-identity-keri", # KERI identity provider (placeholder impl)
  "crates/mee-node-api", # node api & types
  "crates/mee-wasm", # minimal wasm facade (wasm-bindgen)
  "crates/mee-types", # shared domain types
  "crates/mee-sync-api", # backend-agnostic sync engine API
  "crates/mee-sync-iroh-willow", # iroh/willow sync engine
  "crates/mee-node-demo-impl", # demo Node implementation (iroh, willow, mem kv store)
  "crates/mee-demo", # demo node + axum surface
]
resolver = "2"

[workspace.lints.rust]
unsafe_code = "deny"
unused_must_use = "deny"
# missing_docs = "warn"  # TODO: re-enable once public API stabilises
non_ascii_idents = "deny"

[workspace.lints.clippy]
# Groups
correctness = { level = "deny", priority = -1 }
suspicious = { level = "deny", priority = -1 }
complexity = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }

# Pedantic overrides — too noisy for now
module_name_repetitions = "allow"
must_use_candidate = "allow"

# --- Deny: clear-cut safety rules ---

# Don't panic
unwrap_used = "deny"
panic = "deny"
todo = "deny"
unimplemented = "deny"

# Don't break the type system
mem_forget = "deny"
undocumented_unsafe_blocks = "deny"
multiple_unsafe_ops_per_block = "deny"

# Don't leave debug code
dbg_macro = "deny"
print_stdout = "deny"
print_stderr = "deny"

# Don't call process::exit
exit = "deny"

# Useless string ops
string_to_string = "deny"

# --- Warn: aspirational, tighten later ---

# Panic-adjacent
expect_used = "warn"
indexing_slicing = "warn"
unwrap_in_result = "warn"

# Type system
as_conversions = "warn"

# String discipline
str_to_string = "warn"

# Error docs — silenced until public API stabilises
missing_errors_doc = "allow"
missing_panics_doc = "allow"

# Misc
infinite_loop = "deny"
shadow_unrelated = "allow"
redundant_clone = "warn"
large_futures = "warn"

[patch.crates-io]
willow-data-model = { git = "https://github.com/n0-computer/willow-rs.git", branch = "main" }
willow-encoding = { git = "https://github.com/n0-computer/willow-rs.git", branch = "main" }
meadowcap = { git = "https://github.com/n0-computer/willow-rs.git", branch = "main" }
