[workspace]
members = [
  "crates/pdn-types",     # platform primitives + the data vocabulary
  "crates/data-layer",    # document sync over our iroh-docs variant
  "crates/pdn-layer",     # platform surface: domain model + PdnOp AST + uwill tokens
  "crates/pdn-node",      # embeddable node runtime: service glue over data-layer
  "crates/pdn-node-http", # thin HTTP host embedding one runtime
  "crates/test-utils",    # shared scenario-test plumbing (dev-dependency only)
]
exclude = [
  # Nested checkouts carrying their own manifests — without this, cargo run from
  # inside them walks up, finds this workspace, and refuses to build.
  "pdn-store",
  "mee-v1",
  "mee-v3-single-device",
]
resolver = "2"

[workspace.dependencies]
# The iroh stack is pinned here so every consumer agrees.
iroh = "1.0.2"
iroh-blobs = "0.103"
iroh-gossip = "0.101"
# `pdn-store` is our iroh-docs variant (capability-gated ingest); the
# package inside the repo keeps the upstream name `iroh-docs` (cheap
# rebases), we alias it via `package`. To develop against a local
# checkout, patch it in temporarily (patches address the real package name):
#   [patch."https://github.com/MeeFoundation/pdn-store.git"]
#   iroh-docs = { path = "./pdn-store" }
pdn-store = { git = "https://github.com/MeeFoundation/pdn-store.git", package = "iroh-docs" }

[workspace.lints.rust]
unsafe_code = "deny"
unused_must_use = "deny"
non_ascii_idents = "deny"

[workspace.lints.clippy]
# Groups
correctness = { level = "deny", priority = -1 }
suspicious = { level = "deny", priority = -1 }
complexity = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }

# Pedantic overrides — too noisy
module_name_repetitions = "allow"
must_use_candidate = "allow"

# --- Deny: clear-cut safety rules ---

# Don't panic
unwrap_used = "deny"
panic = "deny"
todo = "deny"
unimplemented = "deny"

# Don't break the type system
mem_forget = "deny"
undocumented_unsafe_blocks = "deny"
multiple_unsafe_ops_per_block = "deny"

# Don't leave debug code
dbg_macro = "deny"
print_stdout = "deny"
print_stderr = "deny"

# Don't call process::exit
exit = "deny"

# Useless clones / string ops (`implicit_clone` subsumes `string_to_string`)
implicit_clone = "deny"

# --- Warn: soft rules ---

# Panic-adjacent
expect_used = "warn"
indexing_slicing = "warn"
unwrap_in_result = "warn"

# Type system
as_conversions = "warn"

# String discipline
str_to_string = "warn"

# Error docs — silenced: the public API is a draft
missing_errors_doc = "allow"
missing_panics_doc = "allow"

# Misc
infinite_loop = "deny"
shadow_unrelated = "allow"
redundant_clone = "warn"
large_futures = "warn"
