[package]
name = "iroh-docs-experiment"
version = "0.1.0"
edition = "2021"
description = "Experiment: sync documents over iroh-docs, bypassing willow"

[dev-dependencies]
anyhow = "1"
mee-sync-api = { path = "../mee-sync-api" }
mee-sync-iroh-docs = { path = "../mee-sync-iroh-docs" }
mee-types = { path = "../mee-types" }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }

[lints]
workspace = true
