[package]
name = "mee-demo"
version = "0.1.0"
edition = "2021"
description = "Axum HTTP demo powered by mee-sync-api"

[dependencies]
axum = { version = "0.8.4", features = ["macros"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
futures-util = "0.3"
mee-sync-api = { path = "../mee-sync-api" }
mee-sync-iroh-willow = { path = "../mee-sync-iroh-willow" }
mee-identity-api = { path = "../mee-identity-api" }
mee-types = { path = "../mee-types" }
mee-node-api = { path = "../mee-node-api" }
mee-node-demo-impl = { path = "../mee-node-demo-impl" }
anyhow = "1"
sha2 = "0.10"
hex = "0.4"

[lints]
workspace = true
