[package]
name = "mee-node-api"
version = "0.1.0"
edition = "2021"

[dependencies]
mee-identity-api = { path = "../mee-identity-api" }
mee-types = { path = "../mee-types" }
mee-sync-api = { path = "../mee-sync-api" }
serde = { version = "1", features = ["derive"] }
thiserror = "2"

[lints]
workspace = true
