[package]
name = "mee-node-demo-impl"
version = "0.1.0"
edition = "2021"
description = "Demo Node implementation using Willow/Iroh sync and in-memory store"

[dependencies]
anyhow = "1"
mee-node-api = { path = "../mee-node-api" }
mee-sync-api = { path = "../mee-sync-api" }
mee-sync-iroh-willow = { path = "../mee-sync-iroh-willow" }
mee-identity-api = { path = "../mee-identity-api" }
mee-identity-keri = { path = "../mee-identity-keri" }
mee-types = { path = "../mee-types" }
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
hex = "0.4"

[dev-dependencies]
mee-sync-iroh-willow = { path = "../mee-sync-iroh-willow", features = ["test-utils"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }

[lints]
workspace = true
