[package]
name = "mee-sync-iroh-willow"
version = "0.1.0"
edition = "2021"
description = "Willow/iroh implementation of mee-sync-api"

[features]
default = ["mdns"]
mdns = ["iroh/address-lookup-mdns"]
dht = ["iroh/address-lookup-pkarr-dht"]
gossip = ["dep:iroh-gossip", "dep:sha2", "dep:bytes", "dep:thiserror"]
test-utils = []

[dependencies]
mee-sync-api = { path = "../mee-sync-api" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures-core = "0.3"
futures-util = "0.3"
iroh = "0.96.1"
iroh-blobs = "0.98"
iroh-willow = { git = "https://github.com/MeeFoundation/iroh-willow.git", branch = "willow-experiments-iroh-0.96" }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
async-stream = "0.3"
iroh-gossip = { version = "0.96", optional = true }
sha2 = { version = "0.10", optional = true }
bytes = { version = "1", optional = true }
thiserror = { version = "2", optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }

[[test]]
name = "gossip_discovery"
required-features = ["gossip", "test-utils"]

[lints]
workspace = true
