[package]
name = "mee-sync-iroh-willow"
version = "0.1.0"
edition = "2021"
description = "Willow/iroh implementation of mee-sync-api"

[features]
default = ["mdns"]
mdns = ["iroh/address-lookup-mdns"]
dht = ["iroh/address-lookup-pkarr-dht"]

[dependencies]
mee-sync-api = { path = "../mee-sync-api" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures-core = "0.3"
futures-util = "0.3"
iroh = "0.97"
iroh-blobs = "0.99"
iroh-willow = { git = "https://github.com/MeeFoundation/iroh-willow.git", branch = "willow-experiments-iroh-0.97" }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
async-stream = "0.3"
iroh-gossip = "0.97"
sha2 = "0.10"
bytes = "1"
thiserror = "2"

[lints]
workspace = true
