[package]
name = "mee-wasm"
version = "0.1.0"
edition = "2021"
description = "Minimal WASM facade for Mee PDN (build check only)"
license = "MIT OR Apache-2.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
mee-did-api = { path = "../mee-did-api" }
mee-did-key = { path = "../mee-did-key" }
mee-node-api = { path = "../mee-node-api" }
mee-types = { path = "../mee-types" }
mee-sync-api = { path = "../mee-sync-api" }
serde_json = "1"
futures-util = "0.3"

[package.metadata.docs.rs]
targets = ["wasm32-unknown-unknown"]

[lints]
workspace = true
